--- a/hw-01-pet-names.Rmd
+++ b/hw-01-pet-names.Rmd
@@ -188,6 +188,8 @@ But for this one assignment you'll have to manually enter each time you push in 
 
 **Thought exercise:** Which of the above steps (updating the YAML, committing, and pushing) needs to talk to GitHub?[^1]
 
+Pushing.
+
 # Packages
 
 R is an open-source language, and developers contribute functionality to R via packages.
@@ -230,6 +232,8 @@ You can find out more about the dataset by inspecting its documentation (which c
 # Exercises
 
 1.  According to the data dictionary, how many pets are included in this dataset?
+
+There are 52,519 pets.
 
 🧶 ✅ ⬆️ *Write your answer in your R Markdown document under Exercise 1, knit the document, commit your changes with a commit message that says "Completed Exercise 1", and push. Make sure to commit and push all changed files so that your Git pane is cleared up afterwards.*
 
