--- a/hw-01-pet-names.Rmd
+++ b/hw-01-pet-names.Rmd
@@ -254,6 +254,8 @@ seattlepets %>%
   count(animal_name, sort = TRUE)
 ```
 
+The top three pet names are Lucy (483), Charlie (439), and Luna (387).
+
 🧶 ✅ ⬆️ *Write your answer in your R Markdown document under Exercise 3. In this exercise you will not only provide a written answer but also include some code and output. You should insert the code in the code chunk provided for you, knit the document to see the output, and then write your narrative for the answer based on the output of this function, and knit again to see your narrative, code, and output in the resulting document. Then, commit your changes with a commit message that says "Completed Exercise 3", and push. Make sure to commit and push all changed files so that your Git pane is cleared up afterwards.*
 
 Let's also look to see what the most common pet names are for various species.
