--- a/hw-01-pet-names.Rmd
+++ b/hw-01-pet-names.Rmd
@@ -295,7 +295,8 @@ It may be a bit confusing that both of these are `n`, but this is because we alr
 seattlepets %>% 
   group_by(species) %>%
   count(animal_name, sort = TRUE) %>% 
-  slice_max(n, n = 5)
+  slice_max(n, n = 5) %>%
+  arrange(species, n)
 ```
 
 1.  Based on the previous output we can easily identify the most common cat and dog names in Seattle, but the output is sorted by `n` (the frequencies) as opposed to being organized by the `species`. Build on the pipeline to arrange the results so that they're arranged by `species` first, and then `n`. This means you will need to add one more step to the pipeline, and you have two options: `arrange(species, n)` or `arrange(n, species)`. You should try both and decide which one organizes the output by species and then ranks the names in order of frequency for each species.
